dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=muskcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=muskcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=muskcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=muskcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=muskcoin-wallet.1
endif
endif
